feat(doc): fix readme prompt template

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,13 @@
+# environment file
 .venv
 .env
+
+# debug file
+playground
+.slurm-*.out
+
+# shell 
+build_flash_attn.sh
+
+# model file
+qwen2.5-3b-deepseek-finetuned/
